force-app/main/default/objects/Action_Plan__c/fields/ResponseHistory__c.field-meta.xml
<CustomField>
    <fullName>ResponseHistory__c</fullName>
    <description>To capture Advice Request Response version on Submit for Approval</description>
    <inlineHelpText>To capture Advice Request Response version on Submit for Approval</inlineHelpText>
    <label>Response History</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>