force-app/main/default/objects/Action_Plan__c/fields/ReturnToOwner__c.field-meta.xml
<CustomField>
    <fullName>ReturnToOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Return to Owner</label>
    <type>Checkbox</type>
</CustomField>