force-app/main/default/objects/Action_Plan__c/fields/RMS_Vehicle_Registration__c.field-meta.xml
<CustomField>
    <fullName>RMS_Vehicle_Registration__c</fullName>
    <description>Enter the customer&#39;s vehicle or vessel registration number</description>
    <inlineHelpText>Enter the customer&#39;s vehicle or vessel registration number</inlineHelpText>
    <label>Vehicle/Vessel Registration</label>
    <length>20</length>
    <type>Text</type>
</CustomField>