force-app/main/default/objects/Action_Plan__c/fields/Signatory__c.field-meta.xml
<CustomField>
    <fullName>Signatory__c</fullName>
    <label>Signatory</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Executive Director, Customer Relations &amp; Government Services</fullName>
            </value>
            <value>
                <fullName>Principal Manager, Ministerial &amp; Government Services</fullName>
            </value>
            <value>
                <fullName>Manager, Ministerial &amp; Government Services - Roads, Maritime and Freight</fullName>
            </value>
            <value>
                <fullName>Minister for Roads, Maritime and Freight</fullName>
            </value>
            <value>
                <fullName>Minister for Transport and Infrastructure</fullName>
            </value>
            <value>
                <fullName>Chief of Staff Roads</fullName>
            </value>
            <value>
                <fullName>Chief of Staff Transport</fullName>
            </value>
            <value>
                <fullName>Parliamentary Secretary for Regional Roads, Maritime and Transport</fullName>
            </value>
            <value>
                <fullName>Parliamentary Secretary for Transport and Infrastructure</fullName>
            </value>
            <value>
                <fullName>Chief Executive, Roads and Maritime Services</fullName>
            </value>
            <value>
                <fullName>Secretary</fullName>
            </value>
            <value>
                <fullName>Other signatory</fullName>
            </value>
            <value>
                <fullName>Minister for Western Sydney, WestConnex, and Sport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>