force-app/main/default/objects/Action_Plan__c/fields/SkipValidations__c.field-meta.xml
<CustomField>
    <fullName>SkipValidations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this checkbox is checked then all the validation rules will be skipped</description>
    <label>Skip Validations</label>
    <type>Checkbox</type>
</CustomField>