force-app/main/default/objects/Action_Plan__c/fields/SME_Email__c.field-meta.xml
<CustomField>
    <fullName>SME_Email__c</fullName>
    <label>SME Email</label>
    <type>Email</type>
</CustomField>