force-app/main/default/objects/Action_Plan__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Rejected-Incorrect Assignment</fullName>
            </value>
            <value>
                <fullName>Awaiting Signature</fullName>
            </value>
            <value>
                <fullName>Ready for Printing</fullName>
            </value>
            <value>
                <fullName>Action Plan in Progress</fullName>
            </value>
            <value>
                <fullName>Action Plan Assigned</fullName>
            </value>
            <value>
                <fullName>Awaiting Action Plan Approval</fullName>
            </value>
            <value>
                <fullName>Action Plan in Review</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>