force-app/main/default/objects/Action_Plan__c/fields/Status_Date_Last_Stamped__c.field-meta.xml
<CustomField>
    <fullName>Status_Date_Last_Stamped__c</fullName>
    <label>Status Date Last Stamped</label>
    <type>DateTime</type>
</CustomField>