force-app/main/default/objects/Action_Plan__c/fields/TempAssignedSME__c.field-meta.xml
<CustomField>
    <fullName>TempAssignedSME__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will be used in workflow which will send out an email to the Assigned SME</description>
    <label>Primary SME</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Action_Plans2</relationshipName>
    <type>Lookup</type>
</CustomField>