force-app/main/default/objects/Action_Plan__c/fields/Test_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Test_Due_Date__c</fullName>
    <formula>CASE( 
  MOD( DATEVALUE(CreatedDate) - DATE( 1900, 1, 7 ), 7 ),
  3, DATEVALUE(CreatedDate) + 2 + 3,
  4, DATEVALUE(CreatedDate) + 2 + 3,
  5, DATEVALUE(CreatedDate) + 2 + 3,
  6, DATEVALUE(CreatedDate) + 1 + 3,
  DATEVALUE(CreatedDate) + 3
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Due Date</label>
    <type>Date</type>
</CustomField>