force-app/main/default/objects/Action_Plan__c/fields/TestAgency__c.field-meta.xml
<CustomField>
    <fullName>TestAgency__c</fullName>
    <label>Test Agency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RMS</fullName>
            </value>
            <value>
                <fullName>Non RMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>