force-app/main/default/objects/Action_Plan__c/fields/TestCasePriority__c.field-meta.xml
<CustomField>
    <fullName>TestCasePriority__c</fullName>
    <inlineHelpText>Please select the Case Priority</inlineHelpText>
    <label>Test Case Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MP - Standard</fullName>
            </value>
            <value>
                <fullName>Individual - Standard</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>