force-app/main/default/objects/Action_Plan__c/fields/TestCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>TestCreatedDate__c</fullName>
    <inlineHelpText>Please enter the Created Date here.</inlineHelpText>
    <label>Test Created Date</label>
    <type>Date</type>
</CustomField>