force-app/main/default/objects/Action_Plan__c/fields/Time_Sent_for_Last_Approval__c.field-meta.xml
<CustomField>
    <fullName>Time_Sent_for_Last_Approval__c</fullName>
    <label>Time Sent for Last Approval</label>
    <type>DateTime</type>
</CustomField>