force-app/main/default/objects/Action_Plan__c/fields/Time_spent_in_New__c.field-meta.xml
<CustomField>
    <fullName>Time_spent_in_New__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Time spent in New</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>