force-app/main/default/objects/Action_Plan__c/fields/Time_to_assign_Parent_Action_Plans__c.field-meta.xml
<CustomField>
    <fullName>Time_to_assign_Parent_Action_Plans__c</fullName>
    <formula>Date_First_Child_AP_Assigned__c -  DATEVALUE(Date_stamp_on_Action_Plan_Assigned__c)</formula>
    <label>Time to assign Parent Action Plans</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>