force-app/main/default/objects/Action_Plan__c/fields/Times_Edited__c.field-meta.xml
<CustomField>
    <fullName>Times_Edited__c</fullName>
    <description>Number of times edited is the number of times the advice is for submitted for approval except for the first time. Used for coaching and performance management purposes</description>
    <formula>IF(Times_Submitted__c &gt; 0, Times_Submitted__c - 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Times Edited</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>