force-app/main/default/objects/Action_Plan__c/fields/Times_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Times_Submitted__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of Times the Action Plan is Submitted for Approval</description>
    <label># Times Submitted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>