force-app/main/default/objects/Action_Plan__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advice Request</fullName>
                <default>true</default>
                <label>Advice Request</label>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Customer-Facing Response</fullName>
            </value>
            <value>
                <fullName>Agency Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>