force-app/main/default/objects/Action_Plan__c/fields/X5_mins_from_now__c.field-meta.xml
<CustomField>
    <fullName>X5_mins_from_now__c</fullName>
    <description>Used for time-based trigger to delay insufficient privilege error messages when assigning to another user where sharing is private</description>
    <formula>NOW() + (5/1440)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>5 mins from now</label>
    <type>Date</type>
</CustomField>