force-app/main/default/objects/Action_Plan__c/recordTypes/CFM_Action_Plan.recordType-meta.xml
<RecordType>
    <fullName>CFM_Action_Plan</fullName>
    <active>true</active>
    <description>Use this record type to create new action plan CFM cases</description>
    <label>CFM Action Plan</label>
</RecordType>