force-app/main/default/objects/Action_Plan__c/recordTypes/MCWS_Action_Plan.recordType-meta.xml
<RecordType>
    <fullName>MCWS_Action_Plan</fullName>
    <active>true</active>
    <description>User this record type to create action plan from the case</description>
    <label>MCWS Action Plan</label>
</RecordType>