force-app/main/default/objects/Action_Plan__c/recordTypes/MCWS_Agency.recordType-meta.xml
<RecordType>
    <fullName>MCWS_Agency</fullName>
    <active>true</active>
    <description>Use this record type to create action plan record of the type Advice Request</description>
    <label>Advice Request</label>
</RecordType>