force-app/main/default/objects/Action_Plan__c/recordTypes/MCWS_Child_Action_Plan.recordType-meta.xml
<RecordType>
    <fullName>MCWS_Child_Action_Plan</fullName>
    <active>true</active>
    <description>User this record type to create action plan from the parent action plan</description>
    <label>Child Action Plan</label>
</RecordType>