force-app/main/default/objects/Action_Plan__c/recordTypes/RMS_Action_Plan.recordType-meta.xml
<RecordType>
    <fullName>RMS_Action_Plan</fullName>
    <active>true</active>
    <description>Use this record type to create action plan record of the type Agency Response</description>
    <label>Agency Response</label>
</RecordType>