force-app/main/default/objects/Action_Plan__c/validationRules/Nominated_Approvers_Required_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Nominated_Approvers_Required_Validation</fullName>
    <active>false</active>
    <description>If Nominate Approvers is checked then Nominated Approvers are required</description>
    <errorConditionFormula>AND(
NOT(SkipValidations__c),
OR(
ISBLANK(Approver_Level_1__c ), 
ISBLANK(Approver_Level_2__c ), 
ISBLANK(Approver_Level_3__c )
),
NominateApprovers__c 
)</errorConditionFormula>
    <errorMessage>Please select Approver Level 1/2/3 user</errorMessage>
</ValidationRule>