force-app/main/default/objects/Action_Plan__c/validationRules/Other_Signatory_Require.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Signatory_Require</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Signatory__c, &#39;Other signatory&#39;), 
ISBLANK(Other_Signatory__c), 
RecordType.DeveloperName != &quot;CFM_Action_Plan&quot;
)</errorConditionFormula>
    <errorMessage>Please enter other signatory.</errorMessage>
</ValidationRule>