force-app/main/default/objects/Action_Plan__c/validationRules/Other_Signatory_Reverse_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Signatory_Reverse_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
RecordType.DeveloperName != &quot;CFM_Action_Plan&quot;, 
NOT(ISBLANK(Other_Signatory__c)), 
NOT(ISPICKVAL(Signatory__c,&quot;Other signatory&quot;)) 
)</errorConditionFormula>
    <errorMessage>Other Signatory is required only when Signatory is Other</errorMessage>
</ValidationRule>