force-app/main/default/objects/Action_Plan__c/validationRules/Prevent_action_plan_complete.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_action_plan_complete</fullName>
    <active>true</active>
    <errorConditionFormula>OR(AND(
	RecordType.DeveloperName  &lt;&gt; &#39;CFM_Action_Plan&#39;,	
	NOT(ISBLANK(Parent_Action_Plan__c)),
	NOT(OR(ISPICKVAL( PRIORVALUE( Status__c ) , &#39;Action Plan in Review&#39;), ISPICKVAL( PRIORVALUE( Status__c ) , &#39;Action Plan in Progress&#39;))),
	ISPICKVAL( Status__c , &#39;Completed&#39;),
	ISPICKVAL(  Type__c , &#39;Advice Request&#39;),
	ISCHANGED(Status__c)   
),
AND(
	RecordType.DeveloperName  &lt;&gt; &#39;CFM_Action_Plan&#39;,	
	ISBLANK(Parent_Action_Plan__c),
	NOT(OR(ISPICKVAL( PRIORVALUE( Status__c ) , &#39;Action Plan in Review&#39;), ISPICKVAL( PRIORVALUE( Status__c ) , &#39;Action Plan in Progress&#39;), ISPICKVAL( PRIORVALUE( Status__c ) , &#39;Rejected-Incorrect Assignment&#39;))),
	ISPICKVAL( Status__c , &#39;Completed&#39;),
	ISPICKVAL(  Type__c , &#39;Advice Request&#39;),
	ISCHANGED(Status__c)
))&amp;&amp; NOT(SkipValidations__c)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Current status of action plan is other than &#39;Action Plan in Review&#39;, &#39;Action Plan in Progress&#39; or &#39;Rejected-Incorrect Assignment&#39;. Status of action plan cannot be updated to &#39;Completed&#39;</errorMessage>
</ValidationRule>