force-app/main/default/objects/Action_Plan__c/validationRules/Prevent_incorrect_assignment.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_incorrect_assignment</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	RecordType.DeveloperName  &lt;&gt; &#39;CFM_Action_Plan&#39;,	
	NOT(OR(ISPICKVAL( PRIORVALUE( Status__c ) , &#39;Action Plan in Progress&#39;), ISPICKVAL( PRIORVALUE( Status__c ) , &#39;Action Plan Assigned&#39;))),
	ISPICKVAL( Status__c , &#39;Rejected-Incorrect Assignment&#39;),
	ISPICKVAL(  Type__c , &#39;Advice Request&#39;),
	ISCHANGED(Status__c)   
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Current status of action plan is other than &#39;Action Plan In Progress&#39; or &#39;Action Plan Assigned&#39;. Status of action plan cannot be updated to &#39;Rejected Incorrect Assignment&#39;</errorMessage>
</ValidationRule>