force-app/main/default/objects/Action_Plan__c/validationRules/Reason_for_Rejected_Incorrect_Assignment.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_for_Rejected_Incorrect_Assignment</fullName>
    <active>true</active>
    <description>Agency/Division needs to provide a reason why Action Plan was rejected</description>
    <errorConditionFormula>NOT(SkipValidations__c)&amp;&amp; ISPICKVAL(Status__c, &quot;Rejected-Incorrect Assignment&quot;) &amp;&amp; ISBLANK(Comments__c)</errorConditionFormula>
    <errorDisplayField>Comments__c</errorDisplayField>
    <errorMessage>Please provide a reason for rejecting the Advice Request</errorMessage>
</ValidationRule>