force-app/main/default/objects/Action_Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Action_Plan_Type__c</columns>
    <columns>NAME</columns>
    <columns>Parent_Case__c</columns>
    <columns>Customer__c</columns>
    <columns>Approver_Name__c</columns>
    <columns>Approver_Role__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Parent_Action_Plan__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <columns>Case_Number__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Owner_Is_User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <role>RMS</role>
        <roleAndSubordinates>STA</roleAndSubordinates>
        <roleAndSubordinates>TfNSW</roleAndSubordinates>
        <roleAndSubordinates>TfNSW_CFM</roleAndSubordinates>
        <roleAndSubordinates>TfNSW_Min_Corro</roleAndSubordinates>
    </sharedTo>
</ListView>