force-app/main/default/objects/Action_Plan__c/listViews/All_Active_CFM.listView-meta.xml
<ListView>
    <fullName>All_Active_CFM</fullName>
    <columns>Action_Plan_Type__c</columns>
    <columns>NAME</columns>
    <columns>Divisions__c</columns>
    <columns>Branch__c</columns>
    <columns>Location_Level_3__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Days_Until_Due__c</columns>
    <columns>Status__c</columns>
    <columns>Case_Subject__c</columns>
    <columns>Customer__c</columns>
    <columns>OBO__c</columns>
    <columns>Parent_Action_Plan__c</columns>
    <columns>Type__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Action_Plan__c.CFM_Action_Plan</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Rejected-Incorrect Assignment,Completed</value>
    </filters>
    <label>All Active (CFM)</label>
    <sharedTo>
        <role>RMS</role>
    </sharedTo>
</ListView>