force-app/main/default/objects/Action_Plan__c/listViews/Awaiting_Approval.listView-meta.xml
<ListView>
    <fullName>Awaiting_Approval</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>Action_Plan_Type__c</columns>
    <columns>NAME</columns>
    <columns>Agency__c</columns>
    <columns>Divisions__c</columns>
    <columns>Branch__c</columns>
    <columns>Parent_Action_Plan__c</columns>
    <columns>Customer__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Type__c</columns>
    <columns>Case_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Awaiting Action Plan Approval</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Awaiting Advice Approval</value>
    </filters>
    <label>Awaiting Approval</label>
</ListView>